# AuthService

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_scripts.py
src/: config.py  database.py  main.py
src/api/: auth.py  dependencies.py  entities.py  mock.py  permissions.py  roles.py  seed.py  users.py
src/migrations/: env.py
src/migrations/versions/: 026e5e9a6bdb_added_entities_model.py  06fd68a06420_added_permissions_model.py  2ea3ff4e8464_added_refresh_tokens_model.py  ab536c4a44fb_added_users_model.py  d4188afbbaaa_added_roles_model.py
src/models/: __init__.py  entities.py  permissions.py  refresh_tokens.py  roles.py  users.py
src/repositories/: base.py  entities.py  permissions.py  refresh_tokens.py  roles.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: entities.py  permissions.py  roles.py  users.py
src/services/: base.py  entities.py  permissions.py  refresh_tokens.py  roles.py  users.py
src/utils/: auth.py  database.py  exceptions.py
tests/: conftest.py
tests/e2e_tests/: test_auth.py
tests/integration_tests/auth/: test_api.py
tests/integration_tests/entities/: test_api.py  test_db.py
tests/integration_tests/mock/: test_api.py
tests/integration_tests/permissions/: test_api.py  test_db.py
tests/integration_tests/roles/: test_api.py  test_db.py
tests/integration_tests/users/: test_api.py  test_db.py
tests/unit_tests/: test_auth.py
